Added og meta tags

--- a/css/main.css
+++ b/css/main.css
@@ -76,3 +76,10 @@ h2 {
 	float: left;
 	max-width: 33.333%;
 }
+.button-container {
+	margin: 2em;
+	width: 80%;
+}
+.button-container a+a {
+	margin-left: 10%;
+}
